# HW-qt7-diplom

./: .gitignore  CMakeLists.txt  about.cpp  about.h  about.ui  database.cpp  database.h  formsettings.cpp  formsettings.h  formsettings.ui  graphic.cpp  graphic.h  graphicwindow.cpp  graphicwindow.h  graphicwindow.ui  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  structs.h
